--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,11 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "./src/style"
+              ]
+            },
             "assets": [
               "src/favicon.ico",
               "src/assets"
